fix #2124 add new api: onVisibleChange and open

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -48,6 +48,7 @@ i.trigger {
 .right {
   float: right;
   height: 100%;
+  overflow: hidden;
   .action {
     cursor: pointer;
     padding: 0 12px;
